correct spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ header {
 .carousel-control-next-icon {
     position: absolute;
     bottom: -600px;
-    right: 1120px;
+    right: 1100px;
 	color: #000000;
 }
 
